# tamga

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  tests-multilang.yml
docs/site/: getting-started.md  getting-started.tr.md  index.md  index.tr.md
docs/site/_translations/: tr-glossary.md
docs/site/concepts/: choosing.md  choosing.tr.md  corpus.md  corpus.tr.md  features.md  features.tr.md  index.md  index.tr.md  languages.md  languages.tr.md  methods.md  methods.tr.md  results.md  results.tr.md
docs/site/forensic/: calibration.md  calibration.tr.md  evaluation.md  evaluation.tr.md  index.md  index.tr.md  reporting.md  reporting.tr.md  topic-invariance.md  topic-invariance.tr.md  verification.md  verification.tr.md
docs/site/reference/: api.md  api.tr.md  cli.md  cli.tr.md  config.md  config.tr.md  index.md  index.tr.md
docs/site/tutorials/: federalist.md  federalist.tr.md  index.md  index.tr.md  pan-clef.md  pan-clef.tr.md  turkish.md  turkish.tr.md
docs/superpowers/plans/: 2026-04-17-tamga-phase-1-foundation.md  2026-04-17-tamga-phase-2-features-delta.md  2026-04-17-tamga-phase-3-zeta-reducers-clustering.md  2026-04-17-tamga-phase-4-embeddings-bayesian.md  2026-04-17-tamga-phase-5-viz-reports-shell.md  2026-04-19-multi-language-support.md  2026-04-20-concepts-clarity.md  2026-04-20-multilingual-docs.md
docs/superpowers/specs/: 2026-04-17-tamga-stylometry-package-design.md  2026-04-19-multi-language-support-design.md  2026-04-20-concepts-clarity-design.md  2026-04-20-multilingual-docs-design.md
examples/federalist/: README.md  metadata.tsv  render_figures.py  study.yaml
examples/federalist/corpus/: fed_01.txt  fed_02.txt  fed_03.txt  fed_04.txt  fed_05.txt  fed_06.txt  fed_07.txt  fed_08.txt  fed_09.txt  fed_10.txt  fed_11.txt  fed_12.txt  fed_13.txt  fed_14.txt  fed_15.txt  fed_16.txt  fed_17.txt  fed_18.txt  fed_19.txt  fed_20.txt  fed_21.txt  fed_22.txt  fed_23.txt  fed_24.txt  fed_25.txt  fed_26.txt  fed_27.txt  fed_28.txt  fed_29.txt  fed_30.txt  fed_31.txt  fed_32.txt  fed_33.txt  fed_34.txt  fed_35.txt  fed_36.txt  fed_37.txt  fed_38.txt  fed_39.txt  fed_40.txt  (+45 more)
examples/quickstart/: README.md  metadata.tsv  render_figures.py  study.yaml
examples/quickstart/corpus/: fed_01.txt  fed_06.txt  fed_10.txt  fed_11.txt  fed_14.txt  fed_17.txt  fed_45.txt  fed_47.txt  fed_50.txt
examples/turkish_seyfettin/: fetch_corpus.py  manifest.json  study.yaml
examples/turkish_seyfettin/corpus/: aleko.txt  and.txt  antiseptik.txt  ask_dalgas.txt  ask_ve_ayak_parmaklar.txt  bahar_ve_kelebekler.txt  balkon_hikaye.txt  bas_n_vermeyen_sehit.txt  binecek_sey.txt  bir_hat_ra.txt  bir_kay_s_n_tesiri.txt  bir_refikin_defter_i_ihtisasat_ndan.txt  bir_temiz_havlu_ugruna.txt  bomba.txt  buyucu.txt  diyet.txt  dunyan_n_duzeni.txt  elma.txt  ferman.txt  fon_sadristayn_n_kar_s.txt  fon_sadristayn_n_oglu.txt  forsa.txt  gizli_mabed.txt  havyar.txt  hediye.txt  hurriyet_bayraklar.txt  kasag.txt  keramet.txt  metadata.tsv
scripts/: regenerate_function_words.py
src/bitig/: __init__.py  __main__.py  provenance.py  result.py  runner.py
src/bitig/cli/: __init__.py  bayesian_cmd.py  cache_cmd.py  classify_cmd.py  cluster_cmd.py  consensus_cmd.py  delta_cmd.py  embed_cmd.py  features_cmd.py  gui_cmd.py  info_cmd.py  ingest_cmd.py  init_cmd.py  plot_cmd.py  reduce_cmd.py  report_cmd.py  run_cmd.py  shell_cmd.py  zeta_cmd.py
src/bitig/config/: __init__.py  resolve.py  schema.py
src/bitig/corpus/: __init__.py  corpus.py  document.py
src/bitig/features/: __init__.py  base.py  dependency.py  embeddings.py  function_words.py  lexical_diversity.py  mfw.py  ngrams.py  pos.py  punctuation.py  readability.py  sentence_length.py
src/bitig/forensic/: __init__.py  char_ngrams.py  distortion.py  lr.py  unmasking.py  verify.py
src/bitig/gui/: __init__.py  app.py  filepicker.py  launcher.py  layout.py  state.py
src/bitig/io/: __init__.py  ingest.py
src/bitig/languages/: __init__.py  readability_fr.py  readability_tr.py  registry.py
src/bitig/methods/: bayesian.py  classify.py  cluster.py  consensus.py  imposters.py  reduce.py  rolling_delta.py  zeta.py
src/tamga/: __init__.py  __main__.py  provenance.py  result.py  runner.py
tests/: conftest.py  test_integration.py  test_provenance.py  test_public_api.py  test_result.py  test_runner.py  test_runner_variants.py  test_smoke.py
tests/cli/: test_bayesian_cmd.py  test_cache.py  test_classify_cmd.py  test_cluster_cmd.py  test_consensus_cmd.py  test_delta_cmd.py  test_embed_cmd.py  test_features_cmd.py  test_gui_cmd.py  test_info.py  test_ingest.py  test_init.py  test_plot_cmd.py  test_reduce_cmd.py  test_report_cmd.py  test_run_cmd.py  test_shell_cmd.py  test_skeleton.py  test_zeta_cmd.py
tests/config/: test_resolve.py  test_schema.py
tests/corpus/: test_corpus.py  test_document.py
tests/features/: test_dependency.py  test_embeddings.py  test_feature_matrix.py  test_function_words.py  test_lexical_diversity.py  test_mfw.py  test_ngrams.py  test_pos.py  test_punctuation.py  test_readability.py  test_sentence_length.py
tests/forensic/: test_char_ngrams.py  test_distortion.py  test_lr.py  test_metrics.py  test_pan_harness.py  test_unmasking.py  test_verify.py
tests/gui/: test_results_plotly.py  test_state.py
tests/integration/: test_federalist_parity.py  test_phase3_workflow.py  test_sklearn_pipeline.py  test_turkish_end_to_end.py
tests/io/: test_ingest.py
tests/languages/: test_readability_de.py  test_readability_es.py  test_readability_fr.py  test_readability_tr.py  test_registry.py
tests/methods/: test_bayesian.py  test_classify.py  test_cluster.py  test_consensus.py  test_imposters.py  test_reduce.py  test_rolling_delta.py  test_zeta.py
tests/metrics/: test_calibration.py
tests/plumbing/: test_hashing.py  test_logging.py  test_seeds.py
tests/preprocess/: test_cache.py  test_pipeline.py
tests/report/: test_render.py
tests/scaffold/: test_scaffolder.py
tests/viz/: test_mpl.py  test_plotly.py  test_style.py
(+164 files in other folders)
